<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/ivHeadCard"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_70sdp"
        android:background="@drawable/head_card"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/materialTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/contact_us"
        android:textColor="@color/white"
        android:textSize="@dimen/_20sdp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/ivHeadCard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/ivHeadCard" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="110dp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:paddingStart="@dimen/_20sdp"
        android:paddingEnd="@dimen/_20ssp"
        android:text="@string/contact_us_to_develop_your_android_ios_and_hybrid_app_for_android_iphone_and_website_for_your_business_we_can_manage_and_maintain_an_existing_mobile_app_we_can_work_as_your_mobile_application_developer_to_fulfill_your_mobile_app_needs_on_a_daily_basis"
        android:textColor="@color/black"
        android:textSize="@dimen/_16ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivHeadCard" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:paddingStart="@dimen/_20sdp"
        android:paddingEnd="@dimen/_20ssp"
        android:text="@string/developer_name_zain_shahid"
        android:textColor="@color/black"
        android:textSize="@dimen/_16ssp"
        app:layout_constraintStart_toStartOf="@+id/appCompatTextView"
        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:paddingStart="@dimen/_20sdp"
        android:paddingEnd="@dimen/_20ssp"
        android:text="@string/contact_uss"
        android:textColor="@color/black"
        android:textSize="@dimen/_16ssp"
        app:layout_constraintStart_toStartOf="@+id/appCompatTextView2"
        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView2" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:paddingStart="@dimen/_20sdp"
        android:paddingEnd="@dimen/_20ssp"
        android:text="@string/zainshahidbutt4950_gmail_com"
        android:textColor="@color/black"
        android:textSize="@dimen/_16ssp"
        app:layout_constraintStart_toStartOf="@+id/appCompatTextView3"
        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView3" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/_20sdp"
        android:paddingEnd="@dimen/_20ssp"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/whatsapp_932364202887"
        android:textColor="@color/black"
        android:textSize="@dimen/_16ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView4" />

</androidx.constraintlayout.widget.ConstraintLayout>